# QA_APP

./: .cproject  .project  CMakeLists.txt  Qt_cmake.cpp  README.md  ressources.qrc  stylesheet.qss
analyse/: analysefactory.cpp  analysefactory.h
data/: dicomobj.cpp  dicomobj.h
helper/: asmOpenCV.h  stringHelper.cpp  stringHelper.h
view/: main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
